@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.030.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.031.
 use strict;
 use warnings;
 
@@ -37,8 +37,7 @@ my %WriteMakefileArgs = (
     "strict" => 0,
     "warnings" => 0
   },
-  "VERSION" => "Bible::OBML::Gateway - Bible Gateway content conto Open Bible Markup Language
-2.07",
+  "VERSION" => "2.08",
   "test" => {
     "TESTS" => "t/*.t t/Bible/OBML/*.t"
   }
